# pb_battleroyale

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  builder.sh  config.ini  tt.sh
include/: app.hpp  eventhandler.hpp  ini.h  invalidtexture.hpp  object.hpp  player.hpp  texturemanager.hpp  texturepacker.hpp
include/handlers/: mainhandler.hpp
include/map/: location.hpp  mapmanager.hpp  obstacle.hpp
include/spdlog/: async.h  common-inl.h  common.h  spdlog-inl.h  spdlog.h
include/spdlog/details/: circular_q.h  console_globals.h  log_msg.h  os-inl.h  pattern_formatter.h  periodic_worker.h  synchronous_factory.h
include/spdlog/fmt/bundled/: core.h  format.h  locale.h  printf.h  ranges.h
include/spdlog/sinks/: android_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dup_filter_sink.h  null_sink.h  stdout_color_sinks-inl.h  stdout_sinks-inl.h  wincolor_sink-inl.h
include/storage/: storage.hpp
src/: app.cpp  app.hpp  eventhandler.hpp  helpers.cpp  helpers.hpp  ini.c  invalidtexture.hpp  main.cpp  player.cpp  player.hpp  spdlog.cpp  texturemanager.cpp  texturemanager.hpp  texturepacker.cpp  texturepacker.hpp
src/framework/: window.hpp
src/framework/sdl2/: window.cpp  window.hpp
src/handlers/: mainhandler.cpp  mainhandler.hpp
src/managers/: musicmanager.cpp  musicmanager.hpp  obstaclemanager.cpp  obstaclemanager.hpp  texturemanager.cpp  texturemanager.hpp
src/map/: location.cpp  location.hpp  mapmanager.cpp  mapmanager.hpp  obstacle.hpp
src/spdlog/: async_logger-inl.h  async_logger.h  formatter.h  logger-inl.h  logger.h
src/spdlog/details/: file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  mpmc_blocking_q.h  null_mutex.h  os.h  pattern_formatter-inl.h  periodic_worker-inl.h  registry-inl.h  registry.h  thread_pool-inl.h  thread_pool.h
src/spdlog/fmt/: bin_to_hex.h
src/spdlog/fmt/bundled/: chrono.h  color.h  format-inl.h  ostream.h  posix.h  time.h
src/spdlog/sinks/: ansicolor_sink-inl.h  ansicolor_sink.h  dist_sink.h  msvc_sink.h  ostream_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  wincolor_sink.h
src/storage/: storage.inl
